<resources>
    <string name="app_name">lab1</string>
    <string name="title">中山大学学生信息系统</string>
    <string name="id_num">学号：</string>
    <string name="code">密码：</string>
    <string name="input_num">请输入学号</string>
    <string name="input_code">请输入密码</string>
    <string name="student">学生</string>
    <string name="teacher">教职工</string>
    <string name="login">登录</string>
    <string name="logon">注册</string>
</resources>
