<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zgw.lab1.MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/title_hor_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        />

    <android.support.constraint.Guideline
        android:id="@+id/ver_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/title_hor_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="144dp"
        android:layout_height="142dp"
        android:src="@mipmap/sysu"
        android:contentDescription="@string/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/id_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_num"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/img"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/id_num"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/edt_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="number"
        android:hint="@string/input_num"
        android:ems="12"
        app:layout_constraintTop_toTopOf="@id/id_num"
        app:layout_constraintBottom_toBottomOf="@id/id_num"
        app:layout_constraintLeft_toRightOf="@id/id_num"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/edt_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:hint="@string/input_code"
        android:ems="12"
        app:layout_constraintTop_toTopOf="@id/code"
        app:layout_constraintBottom_toBottomOf="@id/code"
        app:layout_constraintLeft_toRightOf="@id/code"
        app:layout_constraintRight_toRightOf="parent"
        />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/edt_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <RadioButton
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="10dp"
            />

    </RadioGroup>

    <Button
        android:id="@+id/bt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/shape"
        android:layout_marginTop="20dp"
        android:onClick="sendMessage"
        app:layout_constraintTop_toBottomOf="@id/radio"
        app:layout_constraintEnd_toStartOf="@id/ver_guideline"
        app:layout_constraintHorizontal_chainStyle="spread" />


    <Button
        android:id="@+id/bt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logon"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/shape"
        app:layout_constraintTop_toBottomOf="@id/radio"
        app:layout_constraintStart_toEndOf="@id/ver_guideline"
        />
</android.support.constraint.ConstraintLayout>
